Add AOS scroll effects

--- a/src/html/category.html
+++ b/src/html/category.html
@@ -30,7 +30,7 @@
         </div>
         <!-- Category Top Banner -->
 
-        <div class="container-fluid">
+        <div class="container-fluid" data-aos="fade-in">
             <!-- Category Toolbar-->
                 {{> toolbar/toolbar }}
             <!-- /Category Toolbar-->
