--- a/src/html/index.html
+++ b/src/html/index.html
@@ -47,17 +47,17 @@
 
             <!-- Homepage Intro-->
             <div class="position-relative row my-lg-7 pt-5 pt-lg-0 g-8">
-                <div class="bg-text bottom-0 start-0 end-0">
+                <div class="bg-text bottom-0 start-0 end-0" data-aos="fade-up">
                     <h2 class="bg-text-title opacity-10"><span class="text-outline-dark">Old</span>Skool</h2>
                 </div>
-                <div class="col-12 col-md-6 position-relative z-index-20 mb-7 mb-lg-0">
+                <div class="col-12 col-md-6 position-relative z-index-20 mb-7 mb-lg-0" data-aos="fade-right">
                     <p class="text-muted title-small">Welcome</p>
                     <h3 class="display-3 fw-bold mb-5"><span class="text-outline-dark">OldSkool</span> - streetwear & footwear specialists</h3>
                     <p class="lead">We are OldSkool, a leading supplier of global streetwear brands, including names such as <a href="{{webRoot}}/category.html">Stussy</a>, <a href="{{webRoot}}/category.html">Carhartt</a>, <a href="{{webRoot}}/category.html">Gramicci</a>, <a href="{{webRoot}}/category.html">Afends</a> and many more.</p>
                     <p class="lead">With worldwide shipping and unbeatable prices - now's a great time to pick out something from our range.</p>
                     <a href="{{webRoot}}/category.html" class="btn btn-psuedo" role="button">Shop New Arrivals</a>
                 </div>
-                <div class="col-12 col-md-6 position-relative z-index-20 pe-0">
+                <div class="col-12 col-md-6 position-relative z-index-20 pe-0" data-aos="fade-left">
                     <picture class="w-50 d-block position-relative z-index-10 border border-white border-4 shadow-lg">
                         <img class="img-fluid" src="{{webRoot}}/assets/images/banners/banner-5.jpg" alt="{{config.defaultImgAlt}}">
                     </picture>
@@ -74,7 +74,7 @@
             <!-- Homepage Banners-->
             <div class="pt-7 mb-5 mb-lg-10">
                 <div class="row g-4">
-                    <div class="col-12 col-xl-6 position-relative">
+                    <div class="col-12 col-xl-6 position-relative" data-aos="fade-right">
                         <picture class="position-relative z-index-10">
                             <img class="w-100 rounded" src="{{webRoot}}/assets/images/banners/banner-sale.jpg" alt="{{config.defaultImgAlt}}">
                         </picture>
@@ -86,7 +86,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-xl-6">
+                    <div class="col-12 col-xl-6" data-aos="fade-left">
                         <div class="row g-4 justify-content-end">
                             <div class="col-12 col-md-6 d-flex">
                                 <div class="card position-relative overflow-hidden">
