--- a/src/html/product.html
+++ b/src/html/product.html
@@ -51,11 +51,13 @@
             <div class="row g-0">
 
                 <!-- Related Products-->
-                {{> product/product-related }}
+                <div class="col-12" data-aos="fade-up">
+                    {{> product/product-related }}
+                </div>
                 <!-- / Related Products-->
 
                 <!-- Reviews-->
-                <div class="col-12">
+                <div class="col-12" data-aos="fade-up">
                     {{> product/product-reviews }}
                 </div>
                 <!-- / Reviews-->
